# clive

./: LICENSE  README.md  pyproject.toml
.github/workflows/: qc.yml
src/clive/: __init__.py  cli.py
src/clive/loaders/: __init__.py  sssom_loader.py
src/clive/validators/: mapping_validator.py
tests/: __init__.py  test_cli.py
tests/input/: basic.tsv
