[tool.poetry]
name = "clive"
version = "0.0.1"
description = "Clinical Lexicon Integration and Validation Engine. A tool for loading, combining, and checking SSSOM maps from multisite clinical vocabularies."
authors = ["caufieldjh"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sssom = "^0.4.7"
oaklib = "^0.6.3"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
setuptools = ">=65.5.0"
tox = ">=3.25.1"
mkdocs-mermaid2-plugin = ">=0.6.0"

[tool.poetry.scripts]
clive = "clive.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
